integrates\refac(front): #793.66 update breadcrumb css
-update breadcrumb css with styled/components


Former-commit-id: f7a7eb8fb961c4f3b034128be97a8d4c4e9a46ef

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -80,6 +80,23 @@ label {
   cursor: default;
 }
 
+:global .breadcrumb {
+  margin-bottom: 0;
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+
+:global .breadcrumb > li + li::before {
+  padding: 0 2px;
+}
+
+:global .breadcrumb > li + li > a:active,
+:global .breadcrumb > li + li > a:focus,
+:global .breadcrumb > li + li > a:hover {
+  color: #272727 !important;
+}
+
 :global .btn {
   border-radius: 0;
 }
