airs\refac(front): #3733 change home phrase
- Changed home phrase to the new one


Former-commit-id: 3b818f24548fee9de3972be4b391569b7e91af85

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -48,12 +48,12 @@
          data-aos-delay="1000"
          data-aos-offset="0"
          data-aos-duration="500">
-      <h1 class="c-fluid-bk fheader fw9 tl tc-m neue ma0">PENTEST</h1>
-      <p class="c-fluid-bk roboto fw3 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
+      <h1 class="c-fluid-bk fheader fw9 tl tc-m neue">CONTINUOUS HACKING</h1>
+      <p class="c-fluid-bk roboto fw3 lh2 f3 ma0 tl tc-m w-auto-ns nt4-ns">
         FOR YOUR SOFTWARE DEVELOPMENT LIFECYCLE
       </p>
       <!-- Get a Demo button -->
-      <div class="tl-l tc pt2-l pt5">
+      <div class="tl-l tc pt4-l pt5">
         <a class="no-underline" href="{{ SITEURL }}/contact-us/">
           <span class="dib br2 bannerbt f3 hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer mt2">
               Get a Demo
